Implementação do uso de dados reais